# openstack-lab

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  ansible.cfg  circ  envrc  requirements.txt
.github/workflows/: ansible-sanity-test-lint.yml  ansible-sanity-test.yml
ansible/: .ansible-lint  ansible.cfg  inventory_local.yml  playbook_setup.yml  playbook_setup_compute.yml  playbook_setup_controller.yml
ansible/ai_ops_runtime/: playbook_build_orchestrator_wheelhouse.yml  playbook_copy_orchestrator_wheelhouse_seed_to_builder.yml  playbook_manage_mcp_lifecycle.yml  playbook_materialize_assistant_egress.yml  playbook_setup_ai_client_runtime.yml  (+22 more)
ansible/ai_ops_runtime/files/orchestrator/: pyproject.toml  requirements.in
ansible/ai_ops_runtime/files/orchestrator/src/openstack_ai_ops_orchestrator/: __init__.py  contracts.py  evidence.py  fake_codex_adapter.py  mcp_client.py  official_codex_adapter.py  orchestrator.py  redaction.py  runtime_entrypoint.py
ansible/ai_ops_runtime/files/orchestrator/tests/: test_contracts.py  test_evidence.py  test_fake_codex_adapter.py  test_mcp_client.py  test_official_codex_adapter.py  test_orchestrator.py  test_redaction.py  test_runtime_entrypoint.py
docs/: README.md  architecture.md  base-knowledge.md  documentation-audit.md  findings-and-recommendations.md  quality-assessment.md  workflows.md
githooks/: pre-commit
inventories/: controller.yml
molecule/: cleanup.yml  config.yml  destroy.yml  vars_validation.yml  vars_validation_verify_expected.yml  verify.yml
scripts/: check_ai_ops_diagnostic_safety.sh
vagrant/: base.rb
(+545 files in other folders)
